spacing fix

--- a/client/styles/home.scss
+++ b/client/styles/home.scss
@@ -5,7 +5,7 @@ body {
 
 .welcome-text{
   text-align: center;
-  padding-top: 75px;
+  padding-top: 50px;
   //background: $color4;
 }
 
